--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -104,7 +104,7 @@
       <div class="col-sm-9">
         <toggle-switch class="ignoreAllHTTPcookies" ng-model="$ctrl.rule.cookies.ignore_all" on-label="Yes" off-label="No">
         </toggle-switch>
-        <label for="ignore_all" class="text-info" popover-trigger="mouseenter" uib-popover="if the switch is enabled the edge cache will ignore all HTTP cookies while making caching decisions (this affects caching ratio)">
+        <label for="ignore_all" class="text-info" popover-trigger="mouseenter" uib-popover="If the switch is enabled the edge cache will ignore all HTTP cookies while making caching decisions (this affects caching ratio)">
           <i class="fa fa-question-circle"></i>
         </label>
       </div>
