--- a/code/dev/parts/help/contactus.html
+++ b/code/dev/parts/help/contactus.html
@@ -10,29 +10,29 @@
         <div class="panel-body">
           <p>
             Please click on the
-             <a href="https://revapm.zendesk.com/hc/en-us/requests/new" target="_blank">
-                  <i class="glyphicon glyphicon-new-window"></i>
-                  link
-             </a> to submit a support request to our 24x7 Customer Support center: <br>
-
+            <a href="https://revapm.zendesk.com/hc/en-us/requests/new" target="_blank">
+              <i class="glyphicon glyphicon-new-window"></i> link
+            </a> to submit a support request to our 24x7 Customer Support center:
+            <br>
           </p>
           <p>
             You can also email us at <a href="mailto:support@revapm.com">support@revapm.com</a> or call <a href="tel:+14084771738">+1 (408) 477-1738</a>
           </p>
           <ul>
             <li>
-              <a href="https://api.revapm.net/" target="_blank" >
+              <a href="https://api.revapm.net/" target="_blank">
                 <i class="glyphicon glyphicon-new-window"></i> Full documentation on the API service</a>
-
             </li>
             <li>
               <a href="https://revapm.zendesk.com/hc/en-us" target="_blank">
-                <i class="glyphicon glyphicon-new-window"></i>
-                 RevAPM Knowledge Base</a>
+                <i class="glyphicon glyphicon-new-window"></i> RevAPM Knowledge Base</a>
             </li>
             <li>
               <a href="http://status.revapm.net/" target="_blank">
                 <i class="glyphicon glyphicon-new-window"></i> RevAPM Network Status</a>
+            </li>
+            <li>
+              <a href="" ng-click="onGetBillingZonesDetails($event)">Detailed Information About Billing Zones</a>
             </li>
           </ul>
         </div>
