--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -275,7 +275,7 @@
             <div ng-if="showDomainsUsage()" id="domains_usage">
 
               <hr>
-              <h4 class="list-title">Traffic Total Per Billing Zone  <button class="btn btn-xs btn-primary btn-billing-zones-details" uib-tooltip="Click the button to get information about which our locations are included in reported billing zones" ng-click="onGetBillingZonesDetails()">Billing Zones Details</button></h4>
+              <h4 class="list-title">Traffic Total Per Billing Zone  <button class="btn btn-xs btn-primary btn-billing-zones-details" uib-tooltip="Click the button to get information about which our edge locations are included in reported billing zones" ng-click="onGetBillingZonesDetails()">Billing Zones Details</button></h4>
               <table class="table table-stripped table-condensed">
                 <thead>
                   <tr>
@@ -385,7 +385,7 @@
                         </div>
 
                         <hr>
-                        <h4 class="title-traffic-per-billing-zone">Traffic Per Billing Zone <button class="btn btn-xs btn-primary btn-billing-zones-details" uib-tooltip="Click the button to get information about which our locations are included in reported billing zones" ng-click="onGetBillingZonesDetails()">Billing Zones Details</button></h4>
+                        <h4 class="title-traffic-per-billing-zone">Traffic Per Billing Zone <button class="btn btn-xs btn-primary btn-billing-zones-details" uib-tooltip="Click the button to get information about which our edge locations are included in reported billing zones" ng-click="onGetBillingZonesDetails()">Billing Zones Details</button></h4>
                         <table class="table table-stripped table-condensed">
                           <thead>
                             <tr>
@@ -418,7 +418,7 @@
 
             <div ng-if="showAccounts()">
               <hr>
-              <h4>Accounts Usage <button id="btnAccountUsageBillingZonesDetails" class="btn btn-xs btn-primary" uib-tooltip="Click the button to get information about which our locations are included in reported billing zones" ng-click="onGetBillingZonesDetails()"><i></i>Billing Zones Details</button></h4>
+              <h4>Accounts Usage <button id="btnAccountUsageBillingZonesDetails" class="btn btn-xs btn-primary" uib-tooltip="Click the button to get information about which our edge locations are included in reported billing zones" ng-click="onGetBillingZonesDetails()"><i></i>Billing Zones Details</button></h4>
 
               <table datatable="ng" dt-options="accountsDtOptions" dt-column-defs="colDefs" class="table table-stripped table-condensed order-column">
                 <thead>
