--- a/code/dev/parts/staging-environment/staging-environment.tpl.html
+++ b/code/dev/parts/staging-environment/staging-environment.tpl.html
@@ -45,7 +45,7 @@
                   <pre class="console"> curl --resolve "www.test-domain.com:443:{{$ctrl.stagingServers[0].server_ip}}" -v https://www.test-domain.com/</pre>
                 </li>
               </ol>
-              <p>After verifying that the new configuration is working as expected you are welcome to send the configuration to the global network (and make available for your end users) by using <strong>"Publish"</strong> button in domain/SSL configuration forms.</p>
+              <p>After verifying that the new configuration is working as expected you are welcome to send the configuration to the global network (and make available for your end users) by using <strong>"Publish"</strong> button in domain/SSL configuration form.</p>
           </div>
         </div>
       </div>
