--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" name="editForm" autocomplete="off">
+        <div class="form form-horizontal" ng-form="editForm" autocomplete="off">
           <div class="form-group" ng-class="{ 'has-error': editForm.job_name.$invalid && editForm.job_name.$dirty }">
             <label for="job_name" class="col-sm-2 control-label">Job Name *</label>
             <div class="col-sm-10">
@@ -231,7 +231,7 @@
               </button>
             </div>
           </div>
-        </form>
+        </div>
       </div>
     </div>
   </div>
