--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -271,6 +271,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/domains/domains.routes.js"></script>
 <script type="text/javascript" src="js/portal/domains/domains.constants.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-select/domainSelect.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/domain-the-third-party-links/domainTheThirdPartyLinks.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-staging-status/domainStagingStatus.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-caching-rule/domainCachingRule.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-check-integration/domainCheckIntegration.directive.js"></script>
