Setting default value On for new domain control 'Decompress Objects Fetched From The Origin'

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -244,7 +244,7 @@
                 <div class="col-md-9">
                   <toggle-switch id="enableDecompression" name="enable_decompression" is-disabled="_loading" ng-model="model.rev_component_co.enable_decompression" on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="enable_decompression" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Controls whether first-mile proxy servers should decompress content fetched from the origin server. The default value of Off. The switch should be in On position for 'RUM Data Collection' and '3rd-party Links' features to work.">
+                  <label for="enable_decompression" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Controls whether first-mile proxy servers should decompress content fetched from the origin server. The default value of On. The switch should be in On position for 'RUM Data Collection' and '3rd-party Links' features to work.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
