--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -574,7 +574,7 @@
               <hr>
             </uib-tab>
             <uib-tab index="5" heading="Lua Scripting" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This section allows you to enhance the RevAPM service by running custom Lua code snippets on RevAPM proxy servers">
-              <domain-lua-scripting class="form-group" ng-model="model.enable_3rd_party_rewrite"></domain-lua-scripting>
+              <domain-lua-scripting class="form-group" ng-model="model"></domain-lua-scripting>
               <hr>
             </uib-tab>
             <!-- Third-Party Links-->
