Update Third-Party Links and add new directive validate-domain-name-or-url

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -189,6 +189,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-comment-no-special-chars.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-query-strings-options.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-wildcard-domain-field.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-or-url.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard-domains.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name.directive.js"></script>
