--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -579,7 +579,7 @@
             </uib-tab>
             <!-- Third-Party Links-->
             <uib-tab index="6" heading="Third-Party Links" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This section allows you to accelerate your website by redirecting to the CDN platform external objects/scripts served by potentially slow third-party vendors">
-              <domain-the-third-party-links class="form-group" ng-model="model"></domain-the-third-party-links>
+              <domain-the-third-party-links class="form-group" ng-model="$thirdPartyLinks"></domain-the-third-party-links>
               <hr>
             </uib-tab>
           </uib-tabset>
