--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -31,3 +31,5 @@
 <div ng-message="domain-name-regular-or-wildcard" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard or domain name format</div>
 <!-- message for validate-domain-name-regular-or-wildcard-domains  -->
 <div ng-message="domain-name-regular-or-wildcard-domains" class="alert-text alert-text--wildcard-domains-fields">Incorrect wildcard or domain name format</div>
+<!-- message for validate-domain-name-or-url  -->
+<div ng-message="domain-name-or-url" class="alert-text alert-text--domain-name-or-url-fields">Incorrect domain name format or URL</div>
